Index, Projets, Services Page Updates

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="author" content="A&G Roof Steel Builders" />
 <!-- css -->
 <link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/components/cta.css">
 <link rel="stylesheet" type="text/css" href="css/pages/index.css">
+<link rel="stylesheet" type="text/css" href="css/components/cta.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- css-->
 </head>
@@ -35,10 +35,10 @@
 	</header>
 
 	<main>
-		<section class="hero">
-			<div class="hero-content">
-				<img src="img/hero-index.jpg" alt="cover" class="hero-image">	
-				<div class="hero-text">
+		<section class="home-hero">
+			<div class="home-hero-content">
+				<img src="img/hero-index.jpg" alt="cover" class="home-hero-image">	
+				<div class="home-hero-text">
 					<h3>Industrial, Commercial & Residential</h3>
 					<h1>We Raise the Roof<br>with Quality</h1><br>
 					<p>Providing Premium Roofing Solutions for Every Project.</p>
@@ -197,8 +197,8 @@
 		        <div class="footer-item">
 		            <div class="footer-content">
 		                <h3>CONTACT INFORMATION</h3>
-		                <p><i class="fa fa-envelope"></i>Email: info@ag.com</p>
-		                <p><i class="fa fa-phone"></i>Phone: (123) 456-7890</p>
+		                <p><i class="fa fa-envelope"></i> Email: info@ag.com</p>
+		                <p><i class="fa fa-phone"></i> Phone: (123) 456-7890</p>
 		            </div>
 		        </div>    
 		        <div class="footer-item">
