--- a/projects.html
+++ b/projects.html
@@ -2,243 +2,198 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Ninja consulting template | webthemez</title>
+<title>A&G Roof Steel Builders</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="" />
-<meta name="author" content="http://webthemez.com" />
+<meta name="description" content="A&G Roof Steel Builders - We raise the roof with quality." />
+<meta name="author" content="A&G Roof Steel Builders" />
 <!-- css -->
-<link href="css/bootstrap.min.css" rel="stylesheet" />
-<link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-<link href="css/jcarousel.css" rel="stylesheet" />
-<link href="css/flexslider.css" rel="stylesheet" />
-<link href="css/style.css" rel="stylesheet" />
- 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/pages/projects.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- css -->
 </head>
 <body>
-<div id="wrapper">
-	<!-- start header -->
-		<header>
-        <div class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
-                </div>
-                <div class="navbar-collapse collapse ">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li> 
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="active"><a href="pricing.html">Pricing</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-	</header><!-- end header -->
-	<section id="inner-headline">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<h2 class="pageTitle">Home | Pricing</h2>
+	<header class="site-header">
+		<img src="img/line.svg" alt="header-bar" class='header-line'/>
+	    <nav class="main-nav">
+	        <a href="index.html" class="nav-logo">
+	        	<img src="img/aglogo.svg" alt="A&G Logo">
+	        </a>
+	        <div class="nav-links" id="navLinks">
+	            <i class="fa fa-times" onclick="hideMenu()"></i>
+		        <ul>
+		            <li><a href="index.html">Home</a></li>
+		            <li><a href="services.html">Services</a></li>
+		            <li><a href="projects.html">Projects</a></li>
+		            <li><a href="about.html">About Us</a></li>
+		            <li><a href="contact.html">Contact Us</a></li>
+		        </ul>
+		    </div>
+		    <i class="fa fa-bars" onclick="showMenu()"></i>
+	    </nav>
+	</header>
+
+	<main>
+		<section class="hero">
+			<img src="img/flag 1.svg" alt="Service Hero image" class="hero-image">
+			<div class="hero-content">
+				<h1>Projects</h1>
+				<p class="breadcrumb"><a href="index.html">Home</a> / Projects Archive</p>
 			</div>
-		</div>
-	</div>
-	<section id="content">
-	<div class="container">	 
-		<!-- end divider -->
-		<div class="row">
-			<div class="col-lg-12">
-				<h4>Our best plans</h4>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-item">
-					<div class="pricing-heading">
-						<h3><strong>Basic</strong></h3>
+		</section>
+
+		<section class="projects">
+			<div class="container">
+				<div class="projects-grid">
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="projects/project1.html" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Year</h6>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="pricing-container">
-						<ul>
-							<li><i class="icon-ok"></i> Responsive Design</li>
-							<li><i class="icon-ok"></i> Bootstrap Design</li>
-							<li><i class="icon-ok"></i> Unlimited Support</li>
-							<li><i class="icon-ok"></i> Free Trial version</li>
-							<li><i class="icon-ok"></i> HTML5 CSS3 jQuery</li>
-						</ul>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Get Now</a>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="project-item">
+						<img src="img/projects1.png" alt="Large Project">
+						<div class="project-overlay">
+							<div class="project-details">
+								<h3>Pentax New Factory</h3>
+								<a href="#" class="more-details">
+									<div class="plus" style="--c:#fff 90deg,#0000 0;border:10px solid #fff"></div>
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-item">
-					<div class="pricing-heading">
-						<h3><strong>Standard</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;20.00 / Year</h6>
-					</div>
-					<div class="pricing-container">
-						<ul>
-							<li><i class="icon-ok"></i> Responsive Design</li>
-							<li><i class="icon-ok"></i> Bootstrap Design</li>
-							<li><i class="icon-ok"></i> Unlimited Support</li>
-							<li><i class="icon-ok"></i> Free Trial version</li>
-							<li><i class="icon-ok"></i> HTML5 CSS3 jQuery</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Get Now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-item activeItem">
-					<div class="pricing-heading">
-						<h3><strong>Advanced</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Year</h6>
-					</div>
-					<div class="pricing-container">
-						<ul>
-							<li><i class="icon-ok"></i> Responsive Design</li>
-							<li><i class="icon-ok"></i> Bootstrap Design</li>
-							<li><i class="icon-ok"></i> Unlimited Support</li>
-							<li><i class="icon-ok"></i> Free Trial version</li>
-							<li><i class="icon-ok"></i> HTML5 CSS3 jQuery</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Get Now</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="pricing-box-item">
-					<div class="pricing-heading">
-						<h3><strong>Mighty</strong></h3>
-					</div>
-					<div class="pricing-terms">
-						<h6>&#36;15.00 / Year</h6>
-					</div>
-					<div class="pricing-container">
-						<ul>
-							<li><i class="icon-ok"></i> Responsive Design</li>
-							<li><i class="icon-ok"></i> Bootstrap Design</li>
-							<li><i class="icon-ok"></i> Unlimited Support</li>
-							<li><i class="icon-ok"></i> Free Trial version</li>
-							<li><i class="icon-ok"></i> HTML5 CSS3 jQuery</li>
-						</ul>
-					</div>
-					<div class="pricing-action">
-						<a href="#" class="btn btn-medium btn-theme"><i class="icon-bolt"></i> Get Now</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	</section>
-	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
-					<address>
-					<strong>Target company Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
+		</section>
+	</main>
+
+	<footer class="footer">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
-						<p>
-							<span>&copy; Site name 2015 All right reserved. Template by </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
-						</p>
-					</div>
+			<div class="footer-grid">
+		        <div class="footer-item">
+		            <div class="footer-content">
+		                <img src="img/aglogobw.svg" alt="A&G Logo B&W" class='footer-logo'/>
+		                <h3>STORE HOURS</h3>
+		                <p>Monday - Friday: 9 AM - 6 PM</p>
+		                <p>Sunday: Closed</p>
+		            </div>
+		        </div>
+		        <div class="footer-item">
+		            <div class="footer-content">
+		                <h2>A&G ROOF STEEL BUILDERS</h2>
+		                <h3>Main Branch</h3>
+		                <p>A. Bacaltos St. Cokaliong Building Lawaan 2, Sitio Gabon City of Talisay, 6045, 6046 Cebu</p>
+		                <h3>Satellite Branch</h3>
+		                <p>N. Highway Bacalso St, City of Naga, 6037 Cebu</p>
+		            </div>
+		        </div>    
+		        <div class="footer-item">
+		            <div class="footer-content">
+		                <h3>CONTACT INFORMATION</h3>
+		                <p><i class="fa fa-envelope"></i> Email: info@ag.com</p>
+		                <p><i class="fa fa-phone"></i> Phone: (123) 456-7890</p>
+		            </div>
+		        </div>    
+		        <div class="footer-item">
+				  <div class="footer-content">
+				    <h3>FOLLOW US</h3>
+				    <div class="footer-social">
+				      <a href="https://facebook.com/yourpage" target="_blank"><i class="fa fa-facebook"></i></a>
+				    </div>
+				  </div>
 				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+		    </div>  
+	    </div>
 	</footer>
-</div>
-<a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
-<!-- javascript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.fancybox.pack.js"></script>
-<script src="js/jquery.fancybox-media.js"></script> 
-<script src="js/portfolio/jquery.quicksand.js"></script>
-<script src="js/portfolio/setting.js"></script>
-<script src="js/jquery.flexslider.js"></script>
-<script src="js/animate.js"></script>
-<script src="js/custom.js"></script>
+	
+	<button id="scrollToTop" title="Go to top" onclick="scrollToTop()">
+		<i class="fa fa-angle-up active"></i>
+	</button>
+<!-- javascript -->
+<script src="js/toTop.js"></script>
+<script src="js/navlinks.js" defer></script>
+<script src="js/header.js"></script>
 </body>
 </html>
