--- a/projects/project1.html
+++ b/projects/project1.html
@@ -7,17 +7,17 @@
 <meta name="description" content="A&G Roof Steel Builders - We raise the roof with quality." />
 <meta name="author" content="A&G Roof Steel Builders" />
 <!-- css -->
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/pages/services.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/pages/projects/project1.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- css -->
 </head>
 <body>
 	<header class="site-header">
-		<img src="img/line.svg" alt="header-bar" class='header-line'/>
+		<img src="../img/line.svg" alt="header-bar" class='header-line'/>
 	    <nav class="main-nav">
 	        <a href="index.html" class="nav-logo">
-	        	<img src="img/aglogo.svg" alt="A&G Logo">
+	        	<img src="../img/aglogo.svg" alt="A&G Logo">
 	        </a>
 	        <div class="nav-links" id="navLinks">
 	            <i class="fa fa-times" onclick="hideMenu()"></i>
@@ -35,47 +35,15 @@
 
 	<main>
 		<section class="hero">
-			<img src="img/flag 1.svg" alt="Service Hero image" class="hero-image">
+			<img src="../img/flag 1.svg" alt="Service Hero image" class="hero-image">
 			<div class="hero-content">
-				<h1>Services</h1>
-				<p class="breadcrumb"><a href="index.html">Home</a> / Services Archive</p>
-				
+				<h1>Projects</h1>
+				<p class="breadcrumb"><a href="../index.html">Home</a> / <a href="../projects.html">Projects Archive</a> / Project 1</p>
 			</div>
 		</section>
 
-		<section class="services">
-			<div class="container">
-				<div class="services-grid">
-					<div class="service-card">
-						<img src="img/service1.png" alt="Roofing Installation">
-						<div class="card-content">
-							<h2>Roofing Installation</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut amet, risus aliquam sapien amet porta magna quam dictum arcu magna et dolor diam ultricies.</p>
-						</div>
-					</div>
-					<div class="service-card">
-						<img src="img/service1.png" alt="Roofing Installation">
-						<div class="card-content">
-							<h2>Roofing Installation</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut amet, risus aliquam sapien amet porta magna quam dictum arcu magna et dolor diam ultricies.</p>
-						</div>
-					</div>
-					<div class="service-card">
-						<img src="img/service1.png" alt="Roofing Installation">
-						<div class="card-content">
-							<h2>Roofing Installation</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut amet, risus aliquam sapien amet porta magna quam dictum arcu magna et dolor diam ultricies.</p>
-						</div>
-					</div>
-					<div class="service-card">
-						<img src="img/service1.png" alt="Roofing Installation">
-						<div class="card-content">
-							<h2>Roofing Installation</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut amet, risus aliquam sapien amet porta magna quam dictum arcu magna et dolor diam ultricies.</p>
-						</div>
-					</div>
-				</div>
-			</div>
+		<section class="project1">
+			
 		</section>
 	</main>
 
@@ -84,7 +52,7 @@
 			<div class="footer-grid">
 		        <div class="footer-item">
 		            <div class="footer-content">
-		                <img src="img/aglogobw.svg" alt="A&G Logo B&W" class='footer-logo'/>
+		                <img src="../img/aglogobw.svg" alt="A&G Logo B&W" class='footer-logo'/>
 		                <h3>STORE HOURS</h3>
 		                <p>Monday - Friday: 9 AM - 6 PM</p>
 		                <p>Sunday: Closed</p>
@@ -117,12 +85,10 @@
 		    </div>  
 	    </div>
 	</footer>
-
+	
 	<button id="scrollToTop" title="Go to top" onclick="scrollToTop()">
 		<i class="fa fa-angle-up active"></i>
 	</button>
-
-
 <!-- javascript -->
 <script src="js/toTop.js"></script>
 <script src="js/navlinks.js" defer></script>
